--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "^15.0.3",
+    "path-parse": "1.0.7",
     "rollup": "^2.48.0",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
