--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": ".",
-    "declarationDir": "types",
+    "declarationDir": "color",
     "module": "esnext",
     "target": "ES2019",
     "lib": ["esnext"],
