--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhythm.color",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "index.js",
   "module": "index.mjs",
   "types": "types/index.d.ts",
@@ -20,12 +20,12 @@
     "access": "public"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/node": "^15.0.3",
+    "@rollup/plugin-typescript": "latest",
+    "@types/node": "latest",
     "path-parse": "1.0.7",
-    "rollup": "^2.48.0",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "rollup": "latest",
+    "tslib": "latest",
+    "typescript": "latest"
   },
   "license": "MIT",
   "description": "Rhythm® Color System.",
