--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "rhythm.color",
-  "version": "1.3.0",
+  "version": "1.3.2",
   "main": "index.js",
   "module": "index.mjs",
   "types": "types/index.d.ts",
   "scripts": {
-    "build": "yarn clean && yarn && rollup -c && yarn build-css-modules",
-    "build-css-modules": "node ./scripts/build-css-modules.js",
+    "build": "yarn clean && yarn && rollup -c && yarn build-css",
+    "build-css": "node ./scripts/build-css.js",
     "postpublish": "yarn clean",
     "clean": "git clean -fdX"
   },
